# taskchampion-py

./: Cargo.toml  README.md  RELEASING.md  pyproject.toml  taskchampion.pyi
.github/workflows/: CI.yml  checks.yml  ci.yml  docs.yml  tests.yml
src/: dependency_map.rs  lib.rs  operation.rs  operations.rs  replica.rs  working_set.rs
src/task/: data.rs  status.rs  tag.rs  task.rs
tests/: test_dependency_map.py  test_operation.py  test_operations.py  test_replica.py  test_task.py  test_working_set.py
